--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "sass": "^1.89.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.28"
   },
